<resources>
    <string name="app_name">Mahjong</string>
    <string name="hello_mahjong">Hello Mahjong!!!</string>
    <string name="button_to_accept_user_input">Button to accept user input</string>
    <string name="text_box_to_accept_user_input">Text box to accept user input</string>
    <string name="button_send">Send</string>
    <string name="button_clear">Clear</string>
    <string name="name">Name</string>
    <string name="your_input_here">Your input here</string>
    <string name="p0_input_here">P0 input</string>
    <string name="p1_input_here">P1 input</string>
    <string name="p2_input_here">P2 input</string>
    <string name="p3_input_here">P3 input</string>
    <string name="response_to_button">Send button pressed %1$d times. Received the following input: %2$s. Cleared the input text field.</string>
    <string name="empty_edit_text">The input text field is empty. Please enter text and try again.</string>
    <string name="welcome_msg">Welcome to Mahjong 2k20!</string>
    <string name="start_game">Start game</string>
    <string name="join_game">Join game</string>
    <string name="latest_discarded_image">Latest discarded image</string>
    <string name="tile_for_player_at_hand_position_0">Tile for player at hand position 0</string>
    <string name="tile_for_player_at_hand_position_1">tile_for_player_at_hand_position_1</string>
    <string name="tile_for_player_at_hand_position_2">tile_for_player_at_hand_position_2</string>
    <string name="tile_for_player_at_hand_position_3">tile_for_player_at_hand_position_3</string>
    <string name="tile_for_player_at_hand_position_4">tile_for_player_at_hand_position_4</string>
    <string name="tile_for_player_at_hand_position_5">tile_for_player_at_hand_position_5</string>
    <string name="tile_for_player_at_hand_position_6">tile_for_player_at_hand_position_6</string>
    <string name="player_1_turn">Player -1 turn</string>
    <string name="tile_for_player_at_hand_position_10">tile_for_player_at_hand_position_10</string>
    <string name="tile_for_player_at_hand_position_7">tile_for_player_at_hand_position_7</string>
    <string name="tile_for_player_at_hand_position_13">tile_for_player_at_hand_position_13</string>
    <string name="tile_for_player_at_hand_position_12">tile_for_player_at_hand_position_12</string>
    <string name="tile_for_player_at_hand_position_11">tile_for_player_at_hand_position_11</string>
    <string name="tile_for_player_at_hand_position_8">tile_for_player_at_hand_position_8</string>
    <string name="tile_for_player_at_hand_position_9">tile_for_player_at_hand_position_9</string>
    <string name="player_1_hand">Player -1 hand</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="single_player">Single player</string>
    <string name="create_game">Create Game</string>
    <string name="number_of_players">Number of players</string>
    <string name="game_members">Game members</string>
    <string name="game_id">Game ID</string>
    <string name="status">Status</string>
    <string name="your_game_name_here">Your game name here</string>
    <string name="empty" />
    <string name="your_name">Your name</string>
    <string name="game_name">Game Name</string>
    <string name="return_rules">Return</string>
    <string name="paused">Paused</string>
    <string name="player_input_here">player_input_here</string>
    <string name="player_input">player_input</string>
    <string name="this_is_a_popup_window">This is a popup window.</string>
    <string name="show_popup_menu">Show Popup Menu</string>
    <string name="java">JAVA</string>
    <string name="kotlin">Kotlin</string>
    <string name="android">Android</string>
    <string name="leave_game">Leave Game</string>
    <string name="game_paused_waiting_on_players_to_rejoin_leave_game">Game paused. Waiting on players to rejoin. Leave game?</string>
    <string name="todo">TODO</string>
    <string name="chb_game_name">%1$d: %2$s</string>
    <string name="waiting_room_game_name">Game name: %1$s</string>
    <string name="waiting_room_players_ready">Players ready: %1$s</string>
    <string name="waiting_room_players_missing">Players missing: %1$s</string>
    <string name="waiting_room_game_state">Game state: %1$s</string>
    <string name="waiting_room_players_turn">Player turn: %1$d</string>
    <string name="actual_player_id">Player %1$d</string>
    <string name="players_joined_out_of_max">Players joined: %1$d/%2$d</string>
    <string name="wait">Wait</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="rules_and_guidelines">Rules and Gameplay</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="rulebook_link">Rulebook link</string>
    <string name="discarded">Discarded</string>
    <string name="mahjong">Mahjong!</string>
    <string name="pong">Pong?</string>
    <string name="chow">Chow?</string>
    <string name="tse">Tse?</string>
    <string name="flowers_pile">flowers pile</string>
    <string name="kong">Kong</string>
    <string name="discard">Discard</string>
    <string name="draw">Draw</string>
    <string name="_4_players">4 players</string>
    <string name="_3_players">3 players</string>
    <string name="_2_players">2 players</string>
    <string name="_1_player">1 player</string>
    <string name="test_vector_failed">Test vectors failed, please use logcat to debug</string>
    <string name="player_n">Player n</string>

</resources>
