<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_table"
    android:keepScreenOn="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/h6"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_6"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/h5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/h14"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_13"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/h13"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/h2"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_2"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/h1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/h3"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_3"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/h2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/h0"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_0"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/h1"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_1"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/h0"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/h13"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_13"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/h12"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/h12"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_12"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/h11"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/h11"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_11"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/h10"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/h8"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_8"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/h7"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/h9"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_9"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/h8"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/h7"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_7"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/h6"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/h4"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_4"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/h3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/h5"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_5"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/h4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/h10"
        android:layout_width="26dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/tile_for_player_at_hand_position_10"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/h9"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <EditText
        android:id="@+id/P0_input"
        android:layout_width="86dp"
        android:layout_height="62dp"
        android:layout_marginEnd="320dp"
        android:layout_marginRight="320dp"
        android:layout_marginBottom="44dp"
        android:background="#D7FFFFFF"
        android:gravity="center"
        android:hint="@string/p0_input_here"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions|number|text"
        app:layout_constraintBottom_toTopOf="@+id/send_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/P1_input"
        android:layout_width="86dp"
        android:layout_height="62dp"
        android:layout_marginEnd="216dp"
        android:layout_marginRight="216dp"
        android:layout_marginBottom="44dp"
        android:background="#D7FFFFFF"
        android:gravity="center"
        android:hint="@string/p1_input_here"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions|number|text"
        app:layout_constraintBottom_toTopOf="@+id/send_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/P2_input"
        android:layout_width="86dp"
        android:layout_height="62dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:layout_marginBottom="44dp"
        android:background="#D7FFFFFF"
        android:gravity="center"
        android:hint="@string/p2_input_here"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions|number|text"
        app:layout_constraintBottom_toTopOf="@+id/send_button"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/P3_input"
        android:layout_width="86dp"
        android:layout_height="62dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="44dp"
        android:background="#D7FFFFFF"
        android:gravity="center"
        android:hint="@string/p3_input_here"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions|number|text"
        app:layout_constraintBottom_toTopOf="@+id/send_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewOut"
        android:layout_width="312dp"
        android:layout_height="275dp"
        android:layout_marginRight="20dp"
        android:background="#6DFFFFFF"
        android:duplicateParentState="false"
        android:gravity="bottom"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:text="@string/hello_mahjong"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:layout_marginBottom="36dp"
        android:background="#009688"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/discarded"
        android:layout_width="43dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/latest_discarded_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48"
        app:srcCompat="@drawable/mj_back_tile" />

    <TextView
        android:id="@+id/p_turn"
        android:layout_width="95dp"
        android:layout_height="21dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:text="@string/player_1_turn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>