<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unnamed"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/new_list_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/pause"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="#D3CFCF"
        android:gravity="center"
        android:text="@string/game_paused_waiting_on_players_to_rejoin_leave_game"
        android:textColor="#972020"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/leave_button"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="56dp"
        android:text="@string/leave_game"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_list_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>